# Microshell

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Readme.md  SECURITY.md  build.sh  microshell.c  tests.c  tests.cpp
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: codeql.yml  tests.yaml
Examples/: CMakeLists.txt  examples.c
Examples/Structures/: string.h
Microshell/: CMakeLists.txt  Readme.md  colors.h  commands.h  flags.h  globals.h  input.h  main.c
Microshell/Commands/: cd.h  commands.h  exit.h  help.h
Microshell/Commands/Exit/: exit.h
Microshell/Commands/Help/: help.h
Microshell/Structures/Path/: path.h
Microshell/Structures/String/: string.h
Microshell/Structures/Vector/: vector.h
Microshell/Tests/: main.c  path.h  string.h  tests.h  vector.h
Tests/IntegrationTests/: CMakeLists.txt  integration_tests.cpp
Tests/IntegrationTests/Structures/: string.h
Tests/UnitTests/: CMakeLists.txt  unit_tests.cpp
Tests/UnitTests/Structures/: string.h  vector.h
Tests/UnitTests/Vector/: vector.h
UnitTests/: Assert.h  assert.h  string.h  tests.cpp  unordered_map.h  vector.h
docs/: .$Architecture.drawio.bkp  Architecture.drawio
docs/Architecture/Arch/: Architecture.md
docs/Architecture/Arch/diagram/: Architecture.drawio
docs/Architecture/MVP/: Architecture.md
